<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>com.yugabyte</groupId>
    <artifactId>cdcsdk-parent</artifactId>
    <version>0.9.0-SNAPSHOT</version>
	  <relativePath>../cdcsdk-parent/pom.xml</relativePath>
  </parent>

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.yugabyte</groupId>
  <artifactId>cdcsdk-testing</artifactId>
  <version>0.9.0-SNAPSHOT</version>
  <name>cdcsdk-testing</name>


  <properties>
    <junit.jupiter.version>5.8.1</junit.jupiter.version>
    <junit.platform.version>1.8.1</junit.platform.version>
    <version.ybclient>0.8.19-20220531.235858-1</version.ybclient>
    <java.version>17</java.version>
    <test.compiler.source>17</test.compiler.source>
    <test.compiler.target>17</test.compiler.target>
  </properties>

  <distributionManagement>
    <site>
        <id>s3.site</id>
        <url>s3://repository.yugabyte.com/maven/site</url>
    </site>
    <repository>
        <id>s3.release</id>
        <url>s3://repository.yugabyte.com/maven/release</url>
    </repository>
    <snapshotRepository>
    <id>s3.snapshot</id>
        <url>s3://repository.yugabyte.com/snapshot</url>
    </snapshotRepository>
    </distributionManagement>

  <dependencies>
    <dependency>
        <groupId>com.yugabyte</groupId>
        <artifactId>cdcsdk-server-core</artifactId>
        <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.yugabyte</groupId>
      <artifactId>cdcsdk-server-s3</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
        <groupId>org.yb</groupId>
        <artifactId>yb-client</artifactId>
        <version>${version.ybclient}</version>
    </dependency>
    <dependency>
        <groupId>org.yb</groupId>
        <artifactId>yb-client</artifactId>
        <version>${version.ybclient}</version>
        <type>test-jar</type>
        <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- Dependency for the YugabyteDB JDBC driver -->
    <dependency>
        <groupId>com.yugabyte</groupId>
        <artifactId>jdbc-yugabytedb</artifactId>
        <version>42.3.0-beta.1</version>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>com.yugabyte</groupId>
      <artifactId>cdcsdk-server-core</artifactId>
      <type>test-jar</type>
      <scope>test</scope>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.yugabyte</groupId>
      <artifactId>cdcsdk-server-s3</artifactId>
      <type>test-jar</type>
      <scope>test</scope>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>com.yugabyte</groupId>
      <artifactId>testcontainers-yugabytedb</artifactId>
      <version>1.0.0-beta-3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>kafka</artifactId>
      <version>1.17.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>elasticsearch</artifactId>
      <version>1.17.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>postgresql</artifactId>
      <version>1.17.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.debezium</groupId>
      <artifactId>debezium-testing-testcontainers</artifactId>
      <version>1.9.5.Final</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>5.0.1</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.awaitility/awaitility -->
    <dependency>
        <groupId>org.awaitility</groupId>
        <artifactId>awaitility</artifactId>
        <version>4.2.0</version>
        <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-client -->
    <dependency>
        <groupId>org.elasticsearch.client</groupId>
        <artifactId>elasticsearch-rest-client</artifactId>
        <version>8.3.2</version>
        <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.json/json -->
    <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>20220320</version>
        <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
    <dependency>
        <groupId>org.apache.kafka</groupId>
        <artifactId>kafka-clients</artifactId>
        <version>3.2.0</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>5.8.1</version>
        <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>${test.compiler.source}</source>
            <target>${test.compiler.target}</target>
            <testSource>${test.compiler.source}</testSource>
            <testTarget>${test.compiler.target}</testTarget>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>2.22.0</version>
          <executions>
            <execution>
              <id>integration-test</id>
              <goals>
                <goal>integration-test</goal>
              </goals>
            </execution>
            <execution>
              <id>verify</id>
                <goals>
                  <goal>verify</goal>
                </goals>
            </execution>
          </executions>
          <configuration>
            <skipTests>${skipRelTests}</skipTests>
          </configuration>
        </plugin>
      </plugins>
  </build>
</project>
